Updating website for Dapper Linux 27 announce

--- a/blog.html
+++ b/blog.html
@@ -128,6 +128,10 @@
                                     <div class="recent-post widget">
                                         <h3>Recent Posts</h3>
                                         <ul>
+                                        	<li>
+                                                <a href="/blog/announcing-dapper-linux-27.html">Announcing Dapper Linux 27</a><br>
+                                                <time>19 Janurary 2018</time>
+                                            </li>
                                             <li>
                                                 <a href="/blog/announcing-dapper-secure-kernel-patchset.html">Announcing Dapper Secure Kernel Patchset</a><br>
                                                 <time>20 October 2017</time>
@@ -147,6 +151,24 @@
                             <div class="col-md-8">
                             <article>
                                     <div class="blog-post-image">
+                                        <a href="/blog/announcing-dapper-linux-27.html"><img class="img-responsive" src="/blog/images/post-4.png" alt="" /></a>
+                                    </div>
+                                    <div class="blog-content">
+                                        <h2 class="blogpost-title">
+                                        <a href="/blog/announcing-dapper-linux-27.html">Announcing Dapper Linux 27</a>
+                                        </h2>
+                                        <div class="blog-meta">
+                                            <span>19 January 2018</span>
+                                            <span>by Matthew Ruffell</span>
+                                            <span>Thoughts</span>
+                                        </div>
+                                        <p>It's time for another major announcement, and that is the release of Dapper Linux 27! Dapper Linux 27 is the next generation of flagship secure operating systems by Dapper Linux Limited. Dapper Linux is designed from the ground up to keep you safe and secure.
+                                        </p>
+                                        <a href="/blog/announcing-dapper-linux-27.html" class="btn btn-dafault btn-details">Continue Reading</a>
+                                    </div>
+                                </article>
+                            <article>
+                                    <div class="blog-post-image">
                                         <a href="/blog/announcing-dapper-secure-kernel-patchset.html"><img class="img-responsive" src="/blog/images/post-3.png" alt="" /></a>
                                     </div>
                                     <div class="blog-content">
@@ -160,7 +182,7 @@
                                         </div>
                                         <p>Its about time to write a blog post to announce a little side project that I have been working on over for the last few months. As much of the Linux security community is aware, in April 2017, Grsecurity <a href="https://grsecurity.net/passing_the_baton.php">announced</a> that they were discontinuing their publicly available "test" patchset, which bolstered and dramatically improves the security of the Linux kernel.
                                         </p>
-                                        <a href="blog/announcing-dapper-secure-kernel-patchset.html" class="btn btn-dafault btn-details">Continue Reading</a>
+                                        <a href="/blog/announcing-dapper-secure-kernel-patchset.html" class="btn btn-dafault btn-details">Continue Reading</a>
                                     </div>
                                 </article>
                             <article>
@@ -227,7 +249,7 @@
                     <footer id="footer">
                 <div class="container">
                     <div class="col-md-8">
-                        <p class="copyright">Copyright <span>2017</span> Dapper Linux Limited<br><a href="https://riot.im/app/#/room/#dapperlinux:matrix.org">#dapperlinux</a> on matrix.org</p>
+                        <p class="copyright">Copyright <span>2018</span> Dapper Linux Limited<br><a href="https://riot.im/app/#/room/#dapperlinux:matrix.org">#dapperlinux</a> on matrix.org</p>
                     </div>
                     <div class="col-md-4">
                         <!-- Social Media -->
