--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
                                     </div>
                                 </div>
                                 <div class="media-body">
-                                    <h4 class="media-heading">Oz Sandboxing</h4>
+                                    <h4 class="media-heading">Flatpak Sandboxing</h4>
                                     <p>All your graphical applications sandboxed, limiting the attack surface and increasing your security.</p>
                                 </div>
                             </div>
@@ -309,10 +309,10 @@
                         <div class="col-sm-4 col-xs-12">
                             <figure>
                                 <div class="img-wrapper">
-                                    <img src="/images/screenshots/nautilus-gedit.png" class="img-responsive" alt="File manager" >
+                                    <img src="/images/screenshots/dappersec.png" class="img-responsive" alt="Dappersec" >
                                     <div class="overlay">
                                         <div class="buttons">
-                                            <a rel="gallery" class="fancybox" href="/images/screenshots/nautilus-gedit.png">Larger</a>
+                                            <a rel="gallery" class="fancybox" href="/images/screenshots/dappersec.png">Larger</a>
                                             <a target="_blank" href="/features.html">Features</a>
                                         </div>
                                     </div>
@@ -320,11 +320,11 @@
                                 <figcaption>
                                 <h4>
                                 <a href="#">
-                                    File Manager and Text Editor
+                                    Dappersec Kernel
                                 </a>
                                 </h4>
                                 <p>
-                                    Unleash the real power of your machine
+                                    Comprehensive security
                                 </p>
                                 </figcaption>
                             </figure>
@@ -347,7 +347,7 @@
                                 </a>
                                 </h4>
                                 <p>
-                                    Dual web browsers
+                                    Hardened web browsers
                                 </p>
                                 </figcaption>
                             </figure>
@@ -355,10 +355,10 @@
                         <div class="col-sm-4 col-xs-12">
                             <figure>
                                 <div class="img-wrapper">
-                                    <img src="/images/screenshots/oz-sandbox.png" class="img-responsive" alt="Sandboxing" >
+                                    <img src="/images/screenshots/sandbox.png" class="img-responsive" alt="Sandboxing" >
                                     <div class="overlay">
                                         <div class="buttons">
-                                            <a rel="gallery" class="fancybox" href="/images/screenshots/oz-sandbox.png">Larger</a>
+                                            <a rel="gallery" class="fancybox" href="/images/screenshots/sandbox.png">Larger</a>
                                             <a target="_blank" href="/features.html">Features</a>
                                         </div>
                                     </div>
@@ -366,7 +366,7 @@
                                 <figcaption>
                                 <h4>
                                 <a href="#">
-                                    Oz Sandboxing
+                                    Flatpak Sandboxing
                                 </a>
                                 </h4>
                                 <p>
@@ -378,10 +378,10 @@
                         <div class="col-sm-4 col-xs-12">
                             <figure>
                                 <div class="img-wrapper">
-                                    <img src="/images/screenshots/applicationfirewall.png" class="img-responsive" alt="Paxtest" >
+                                    <img src="/images/screenshots/installer.png" class="img-responsive" alt="Installer" >
                                     <div class="overlay">
                                         <div class="buttons">
-                                            <a rel="gallery" class="fancybox" href="/images/screenshots/applicationfirewall.png">Larger</a>
+                                            <a rel="gallery" class="fancybox" href="/images/screenshots/installer.png">Larger</a>
                                             <a target="_blank" href="/features.html">Features</a>
                                         </div>
                                     </div>
@@ -389,11 +389,11 @@
                                 <figcaption>
                                 <h4>
                                 <a href="#">
-                                    Application Firewall
+                                    Calamares Installer
                                 </a>
                                 </h4>
                                 <p>
-                                    Security in action
+                                    Clean and Easy
                                 </p>
                                 </figcaption>
                             </figure>
@@ -459,7 +459,7 @@
             <footer id="footer">
                 <div class="container">
                     <div class="col-md-8">
-                        <p class="copyright">Copyright <span>2017</span> Dapper Linux Limited<br><a href="https://riot.im/app/#/room/#dapperlinux:matrix.org">#dapperlinux</a> on matrix.org</p>
+                        <p class="copyright">Copyright <span>2018</span> Dapper Linux Limited<br><a href="https://riot.im/app/#/room/#dapperlinux:matrix.org">#dapperlinux</a> on matrix.org</p>
                     </div>
                     <div class="col-md-4">
                         <!-- Social Media -->
