--- a/documentation.html
+++ b/documentation.html
@@ -206,7 +206,13 @@
                         </p>
                         <p>
                         <h4>For Macintosh Users:</h4>
+                        <p>
+                        Download Fedora Media Writer, and select Custom Os.
+                        </p>
                         <h4>For Windows Users:</h4>
+                        <p>
+                        Download Fedora Media Writer, and select Custom Os.
+                        </p>
                     </div>
                 </div>
             </div>
@@ -217,6 +223,9 @@
                 <div class="row">
                     <div>
                         <h2>Installing Dapper Linux</h2>
+                        <p>
+                        Open the shell overview, and click "Install Dapper Linux". If you have enough disk space (5gb) you will be allowed to install. Follow the steps in the installer, and make sure to tick the "Encrypt disk" checkbox on the disk screen.
+                        </p>
                     </div>
                     
                 </div>
@@ -250,7 +259,7 @@
         <footer id="footer">
                 <div class="container">
                     <div class="col-md-8">
-                        <p class="copyright">Copyright <span>2017</span> Dapper Linux Limited<br><a href="https://riot.im/app/#/room/#dapperlinux:matrix.org">#dapperlinux</a> on matrix.org</p>
+                        <p class="copyright">Copyright <span>2018</span> Dapper Linux Limited<br><a href="https://riot.im/app/#/room/#dapperlinux:matrix.org">#dapperlinux</a> on matrix.org</p>
                     </div>
                     <div class="col-md-4">
                         <!-- Social Media -->
