--- a/download.html
+++ b/download.html
@@ -144,27 +144,27 @@
                 <div class="row">
                 	<div class="col-md-6">
                 		<div class="block">
-                            <h3> Dapper Linux 27 Alpha</h3>
-                            <p>ISO images are released weekly. Latest: 2018-01-19</p>
+                            <h3> Dapper Linux 27 Workstation</h3>
+                            <p>ISO images are released weekly. Latest: 2018-03-30</p>
                             <br>
                             <table>
                                 <tr>
                                     <td>
                                         <img class="img-responsive" src="/images/anaconda.png" alt="" style="float: left;">
-                                         <a href="https://download.dapperlinux.com/dapperlinux/Dapper-Linux-Live-27-2018-01-19.iso" style="float: left;"><h3>Dapper Linux 27 2018-01-19</h3></a>
+                                         <a href="https://download.dapperlinux.com/dapperlinux/Dapper-Linux-Live-27-2018-03-30.iso" style="float: left;"><h3>Dapper Linux 27 2018-03-30</h3></a>
                                     </td>
                                 </tr>
                                 <tr>
                                     <td>
-                                        <p>3.3 GB ISO Image for x86_64 based personal computers</p>
+                                        <p>3.6 GB ISO Image for x86_64 based personal computers</p>
                                     </td>
                                 </tr>
                                 <tr>
                                     <td>
                                         <p>
-                                        	<a href="https://download.dapperlinux.com/dapperlinux/Dapper-Linux-Live-27-2018-01-19.iso.sig">sig</a>
-                                        	<a href="https://download.dapperlinux.com/dapperlinux/Dapper-Linux-Live-27-2018-01-19.iso.sha1.txt">sha1</a>
-                                        	<a href="https://download.dapperlinux.com/dapperlinux/Dapper-Linux-Live-27-2018-01-19.iso.sha256.txt">sha256</a></p>
+                                        	<a href="https://download.dapperlinux.com/dapperlinux/Dapper-Linux-Live-27-2018-03-30.iso.sig">sig</a>
+                                        	<a href="https://download.dapperlinux.com/dapperlinux/Dapper-Linux-Live-27-2018-03-30.iso.sha1.txt">sha1</a>
+                                        	<a href="https://download.dapperlinux.com/dapperlinux/Dapper-Linux-Live-27-2018-03-30.iso.sha256.txt">sha256</a></p>
                                     </td>
                                 </tr>
                             </table>
