Dapper Linux 28 Release

--- a/blog.html
+++ b/blog.html
@@ -128,7 +128,15 @@
                                     <div class="recent-post widget">
                                         <h3>Recent Posts</h3>
                                         <ul>
-                                        	<li>
+					    <li>
+                                                <a href="/blog/announcing-dapper-linux-28.html">Announcing Dapper Linux 28</a><br>
+                                                <time>24 June 2018</time>
+                                            </li>
+					    <li>
+                                                <a href="/blog/update-on-dapper-secure-kernel-patchset.html">Update on Dapper Secure Kernel Patchset</a><br>
+                                                <time>18 June 2018</time>
+                                            </li>
+                                            <li>
                                                 <a href="/blog/announcing-dapper-linux-27.html">Announcing Dapper Linux 27</a><br>
                                                 <time>19 Janurary 2018</time>
                                             </li>
@@ -149,6 +157,42 @@
                                 </div>
                             </div>
                             <div class="col-md-8">
+			    <article>
+                                    <div class="blog-post-image">
+                                        <a href="/blog/announcing-dapper-linux-28.html"><img class="img-responsive" src="/blog/images/post-6.png" alt="" /></a>
+                                    </div>
+                                    <div class="blog-content">
+                                        <h2 class="blogpost-title">
+                                        <a href="/blog/announcing-dapper-linux-28.html">Announcing Dapper Linux 28</a>
+                                        </h2>
+                                        <div class="blog-meta">
+                                            <span>24 June 2018</span>
+                                            <span>by Matthew Ruffell</span>
+                                            <span>Thoughts</span>
+                                        </div>
+                                        <p>Dapper Linux Limited is pleased to annouce the release of Dapper Linux 28! Dapper Linux 28 is the next major revision of the flagship secure operating system developed by Dapper Linux Limited.
+                                        </p>
+                                        <a href="/blog/announcing-dapper-linux-28.html" class="btn btn-dafault btn-details">Continue Reading</a>
+                                    </div>
+                                </article>
+			    <article>
+                                    <div class="blog-post-image">
+                                        <a href="/blog/update-on-dapper-secure-kernel-patchset.html"><img class="img-responsive" src="/blog/images/post-5.png" alt="" /></a>
+                                    </div>
+                                    <div class="blog-content">
+                                        <h2 class="blogpost-title">
+                                        <a href="/blog/update-on-dapper-secure-kernel-patchset.html">Update on Dapper Secure Kernel Patchset</a>
+                                        </h2>
+                                        <div class="blog-meta">
+                                            <span>18 June 2018</span>
+                                            <span>by Matthew Ruffell</span>
+                                            <span>Thoughts</span>
+                                        </div>
+                                        <p>I think its important to give an update on Dapper Secure Kernel Patchset, the technology underpinning the majority of security foundations found within Dapper Linux.
+                                        </p>
+                                        <a href="/blog/update-on-dapper-secure-kernel-patchset.html" class="btn btn-dafault btn-details">Continue Reading</a>
+                                    </div>
+                                </article>
                             <article>
                                     <div class="blog-post-image">
                                         <a href="/blog/announcing-dapper-linux-27.html"><img class="img-responsive" src="/blog/images/post-4.png" alt="" /></a>
