Fixing up some dappersec mentions

--- a/features.html
+++ b/features.html
@@ -120,7 +120,7 @@
                 <div class="row">
                         <div class="col-md-5">
                         <h2>Hardened Linux Kernel with Dapper Secure Kernel Patchset</h2>
-                            <p class="text-left">Dapper Linux ships with a hardened Linux Kernel, patched with Dapper Secure Kernel Patchset, a continuation of Grsecurity/PaX/RAP. Grsecurity/PaX patches are a true innovation to the Linux security world, and strives to prevent zero day attacks and other advanced threats by eliminating entire bug classes and exploit vectors, rather than fixing individual instances of a problem. The PaX patches pioneered Kernel level ASLR and other important security mitigations, and Dapper Linux ships with applications correctly set up for use with this kernel. Grsecurity, PaX and RAP provides the core security foundation of Dapper Linux.</p>
+                            <p class="text-left">Dapper Linux ships with a hardened Linux Kernel, patched with Dapper Secure Kernel Patchset, a continuation of Grsecurity/PaX/RAP. Grsecurity/PaX patches are a true innovation to the Linux security world, and strives to prevent zero day attacks and other advanced threats by eliminating entire bug classes and exploit vectors, rather than fixing individual instances of a problem. The PaX patches pioneered Kernel level ASLR and other important security mitigations, and Dapper Linux ships with applications correctly set up for use with this kernel. The Dappersec kernel provides the core security foundation of Dapper Linux.</p>
                         </div>
                         <div class="col-md-7">
                             <a href="/images/screenshots/dappersec.png"><img class="img-responsive" src="/images/screenshots/dappersec.png" alt=""></a>
@@ -144,7 +144,7 @@
                 <div class="row">
                         <div class="col-md-5">
                         <h2>Hardened Browsing with Dual Browsers</h2>
-                            <p class="text-left"> Two browsers are provided to aid your privacy. One is completely stock Firefox and can be customised as wished, and the other is known as Dapper Hardened Browser, an innovation from the authors of Dapper Linux. Dapper Hardened Browser has its settings set for maximum privacy out of the box, and enjoys the following preinstalled add-ons: NoScript, RequestPolicy, UBlock, Random Agent Spoofer, Self Destructing Cookies, Disconnect, Ghostery and HTTPS Everywhere.</p>
+                            <p class="text-left"> Two browsers are provided to aid your privacy. One is completely stock Firefox and can be customised as wished, and the other is known as Dapper Hardened Browser, an innovation from the authors of Dapper Linux. Dapper Hardened Browser has its settings set for maximum privacy out of the box, and enjoys the following preinstalled add-ons: NoScript, UMatrix, UBlock Origin, Decentraleyes, Self Smart Referer, Disconnect, Privacy Badger and HTTPS Everywhere.</p>
                         </div>
                         <div class="col-md-7">
                             <a href="/images/screenshots/web-browsers.png"><img class="img-responsive" src="/images/screenshots/web-browsers.png" alt=""></a>
