--- a/index.html
+++ b/index.html
@@ -174,8 +174,8 @@
                                     </div>
                                 </div>
                                 <div class="media-body">
-                                    <h4 class="media-heading">Grsecurity & PaX Kernel</h4>
-                                    <p>Run the latest Linux Kernel with the most cutting edge security improvements provided by Grsecurity and Pax.</p>
+                                    <h4 class="media-heading">Dappersec Kernel</h4>
+                                    <p>Run a hardened Linux Kernel with cutting edge security improvements provided by Dapper Secure Kernel Patchset.</p>
                                 </div>
                             </div>
                         </div>
