Adding blog post on 100 releases of dappersec

--- a/blog.html
+++ b/blog.html
@@ -128,6 +128,10 @@
                                     <div class="recent-post widget">
                                         <h3>Recent Posts</h3>
                                         <ul>
+                                            <li>
+                                                <a href="/blog/celebrating-100-releases-of-dapper-secure-kernel-patchset.html">Celebrating 100 Releases of Dapper Secure Kernel Patchset</a><br>
+                                                <time>03 September 2018</time>
+                                            </li>
 					    <li>
                                                 <a href="/blog/announcing-dapper-linux-28.html">Announcing Dapper Linux 28</a><br>
                                                 <time>24 June 2018</time>
@@ -157,6 +161,24 @@
                                 </div>
                             </div>
                             <div class="col-md-8">
+                            <article>
+                                    <div class="blog-post-image">
+                                        <a href="/blog/celebrating-100-releases-of-dapper-secure-kernel-patchset.html"><img class="img-responsive" src="/blog/images/post-7.png" alt="" /></a>
+                                    </div>
+                                    <div class="blog-content">
+                                        <h2 class="blogpost-title">
+                                        <a href="/blog/celebrating-100-releases-of-dapper-secure-kernel-patchset.html">Celebrating 100 Releases of Dapper Secure Kernel Patchset</a>
+                                        </h2>
+                                        <div class="blog-meta">
+                                            <span>03 September 2018</span>
+                                            <span>by Matthew Ruffell</span>
+                                            <span>Thoughts</span>
+                                        </div>
+                                        <p>Dapper Secure Kernel Patchset Stable has reached a major milestone, which is 100 releases! What an achievement! Dapper Secure Kernel Patchset Stable has been keeping the community secure since 4.9.24, all the way to 4.9.124.
+                                        </p>
+                                        <a href="/blog/celebrating-100-releases-of-dapper-secure-kernel-patchset.html" class="btn btn-dafault btn-details">Continue Reading</a>
+                                    </div>
+                                </article>
 			    <article>
                                     <div class="blog-post-image">
                                         <a href="/blog/announcing-dapper-linux-28.html"><img class="img-responsive" src="/blog/images/post-6.png" alt="" /></a>
